<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_navigation"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:name="com.andresuryana.budgettrack.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/statistic"
        android:name="com.andresuryana.budgettrack.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic" />

    <fragment
        android:id="@+id/notification"
        android:name="com.andresuryana.budgettrack.ui.notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/setting"
        android:name="com.andresuryana.budgettrack.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

</navigation>